discussion/kv_engine/177001/177001_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Move throttle_test to its own test suite

Change-Id: Ic55623bb6a5c7fd4e7ab87fb391d1c9cb1e29057

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-03 12:30:11.000000000
Message: 
Uploaded patch set 5: Patch Set 4 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-03 12:34:41.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47315/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47315/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39766/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39766/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8225/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8225/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20438/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20438/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20786/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20786/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21426/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21426/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28819/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28819/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19660/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19660/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8324/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8324/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18556/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/throttle_test.cc:58:22: error: no member named "thread" in namespace "std" [clang-diagnostic-error]
    std::vector<std::thread> threads;
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/throttle_test.cc:58:30: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
    std::vector<std::thread> threads;
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/throttle_test.cc:61:22: error: no member named "thread" in namespace "std" [clang-diagnostic-error]
                std::thread{[func, name = "bucket-" + std::to_string(ii)]() {
                     ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18556/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/throttle_test.cc:58:22:
error: no member named "thread" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18556/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17707/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
